--- a/_layouts/news-index.html
+++ b/_layouts/news-index.html
@@ -34,22 +34,20 @@
 
 <div id="index">
     <h1>{{ page.title }}</h1>
-    {% for post in site.posts %}  
-        {% if post.next == nil %}
-            <h3>{{ post.date | date: '%B %Y' }}</h3>
-        {% else %}
-            {% capture month %}{{ post.date | date: '%B' }}{% endcapture %}
-            {% capture nmonth %}{{ post.next.date | date: '%B' }}{% endcapture %}
-            {% if month != nmonth %}
-                <h3>{{ post.date | date: '%B %Y' }}</h3>
-            {% endif %}
-        {% endif %}
+    {% capture written_year %}'None'{% endcapture %}
+    {% for post in site.categories.blog %}
+      {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+      {% if year != written_year %}
+        <h3>{{ year }}</h3>
+        {% capture written_year %}{{ year }}{% endcapture %}
+      {% endif %}
+
         <article>
             {% if post.link %}
                 <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
             {% else %}
                 <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
-                <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
+                <p>{{ post.excerpt | strip_html | truncate: 500 }}</p>
             {% endif %}
         </article>
     {% endfor %}
