--- a/_layouts/presentation-post-index.html
+++ b/_layouts/presentation-post-index.html
@@ -13,32 +13,45 @@
 
 {% include _navigation.html %}
 
+{% if page.image.feature %}
+  <div class="image-wrap">
+  <img src=
+    {% if page.image.feature contains 'http' %}
+      "{{ page.image.feature }}"
+    {% else %}
+      "{{ site.url }}/images/{{ page.image.feature }}"
+    {% endif %}
+  alt="{{ page.title }} feature image">
+  {% if page.image.credit %}
+    <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
+  {% endif %}
+  </div><!-- /.image-wrap -->
+{% endif %}
 
+<div class="article-author-side">
+  {% include _author-bio.html %}
+</div>
 
-<div id="main" role="main">
-  <div class="article-author-side">
-    {% include _author-bio.html %}
-  </div>
-  <div id="index">
+<div id="index">
     <h1>{{ page.title }}</h1>
     {% capture written_year %}'None'{% endcapture %}
-    {% for post in site.categories.presentation %}  
+    {% for post in site.categories.presentation %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% if year != written_year %}
         <h3>{{ year }}</h3>
         {% capture written_year %}{{ year }}{% endcapture %}
       {% endif %}
-      <article>
-        {% if post.link %}
-          <h2 class="link-post"><a href="{{ site.github.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></a></h2>
-        {% else %}
-          <h2><a href="{{ site.github.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
-          <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
-        {% endif %}
-      </article>
+
+        <article>
+            {% if post.link %}
+                <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
+            {% else %}
+                <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
+                <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
+            {% endif %}
+        </article>
     {% endfor %}
-  </div><!-- /#index -->
-</div><!-- /#main -->
+</div><!-- /#index -->
 
 <div class="footer-wrap">
   <footer>
@@ -47,6 +60,6 @@
 </div><!-- /.footer-wrap -->
 
 {% include _scripts.html %}
-
+  
 </body>
 </html>
